<resources>
    <string name="app_name">Motivation</string>
    <string name="bottom_todo">Заметки</string>
    <string name="bottom_advice">Советы</string>
    <string name="bottom_motivation">Мотивация</string>
    <string name="bottom_habits">Привычки</string>
    <string name="bottom_settings">Настройки</string>

    <string name="quote_1">Мы часто повторяем, что о человеке судят по его делам, но забываем иногда, что слово тоже поступок. Речь человека — зеркало его самого.</string>
    <string name="quote_2">Красота заключается не в том, чтобы иметь красивое лицо. А в том, чтобы иметь красивые мысли, красивое сердце и красивую душу.</string>
    <string name="quote_3">Нет величия там, где нет простоты, добра и правды.</string>
    <string name="quote_4">Если ты богат, не думай об этом, если ты беден — не принимай свою бедность всерьез. Если ты способен жить в мире, помня о том, что мир — это только спектакль, ты будешь свободным, тебя не коснутся страдания. Страдания — результат серьезного отношения к жизни; блаженство — результат игры. Воспринимай жизнь, как игру. Радуйся ей!</string>
    <string name="quote_5">Женщины говорят о любви и молчат о любовниках. Мужчины — наоборот</string>
    <string name="quote_6">Моё ЛЮБЛЮ очень дорогого стоит. Говорю это редко и мало кому.</string>
    <string name="quote_7">Все относительно. Ты должен осознать, что люди имеют право мыслить не так, как мыслишь ты, и не делать того, чего ты от них ожидаешь. Они, вероятно, любят тебя, но их любовь может проявляться не так, как ты хочешь.</string>
    <string name="quote_8">Чтение в кровати — это рай, если на книгу падает достаточно света и если не проливать на страницы кофе или коньяк.</string>
    <string name="quote_9">Умение прощать — свойство сильных. Слабые никогда не прощают.</string>
    <string name="quote_10">То, что Вы называете любовью, я называю у Вас хорошим расположением духа. Чуть Вам плохо (нелады дома, дела, жара) — я уже не существую.</string>
    <string name="quote_11">Успех — это умение двигаться от неудачи к неудаче, не теряя энтузиазма.</string>
    <string name="quote_12">А в начале пути мало кто в нас верит, не правда ли?</string>
    <string name="quote_13">Мы не имеем право потреблять счастье,не производя его.</string>
    <string name="quote_14">Я не могу примириться с мыслью, что жизнь проходит так быстро, а я не живу по-настоящему.</string>
    <string name="quote_15">Любовь понимает и разделяет всё — сочувствием. Любовь любит находить во всём добро, она в него верит. Его везде ищет. Любовь прощает даже жестокосердие и извиняет осуждающего. Самая тяжёлая задача любви — это прощать отсутствие её в других, находить извинение для нетерпимости, прощать того, кто сам прощать не умеет. Нет на свете более утешительного и чудного зрелища, чем любовь, заслоняющая собою величайшее преступление — отсутствие любви. Берегите в себе человека.</string>
    <string name="quote_16">Секрет того, чтобы добиться чего-то – начать.</string>
    <string name="quote_17">Бог посылает нам испытания, чтобы мы, преодолевая их, укреплялись, а не отчаивались!</string>
    <string name="quote_18">Пожалуйста, верьте в себя, ничего не бойтесь, будьте свободными, рискуйте. Понимаете, жизнь такая штука, что вот вроде бы ты молодой, молодой, молодой, а потом — бац и конец. Оглядываешься и думаешь о том, как много всего не сделал, потому что боялся, стеснялся, струсил.Не надо ничего бояться. Рискуйте. Пусть даже вы ошибетесь. Это жизнь. И главное, конечно, любите друг друга. Всегда, каждую минуту. Любите…</string>
    <string name="quote_19">Если драгоценный камень попадает в грязь, он остается драгоценностью. Если пыль подымается к небу, она остается пылью.</string>
    <string name="quote_20">При общении с человеком мне все равно, кто передо мной: великий или обычный человек или же нищий. Самое главное — улыбка и искренность на лице. Различие в религии, культуре, языке, расе — все это неважно. Образованный человек или нет, богач или бедняк — все равно. Открывая свое сердце и сознание, я принимаю людей как своих старых друзей.</string>
    <string name="quote_21">Делай то, чего хочет от тебя твое тело: добивайся славы, почестей, богатства, — и жизнь твоя будет адом. Делай то, чего хочет от тебя дух, живущий в тебе: добивайся смирения, милосердия, любви, — и тебе не нужно будет никакого рая. Рай будет в душе твоей.</string>
    <string name="quote_22">Никто не прожил жизнь, подобную моей. Я ничего не понимала. Никто меня ничему не учил. До всего должна была дойти сама.</string>
    <string name="quote_23">Наши страсти подобны фениксу. Когда сгорает одна страсть, из пепла рождается другая.</string>
    <string name="quote_24">Если ты хочешь построить корабль, не надо созывать людей, чтобы все спланировать, разделить работу, достать инструменты и рубить деревья, надо заразить их стремлением к бесконечному морю. Тогда они сами построят корабль.</string>
    <string name="quote_25">2 процента людей — думает, 3 процента — думает, что они думают, а 95 процентов людей лучше умрут, чем будут думать.</string>
    <string name="quote_26">Величайшее в жизни счастье- это уверенность в том, что нас любят. Любят за то, что мы такие, какие мы есть.</string>
    <string name="quote_27">Постарайтесь получить то, что любите, иначе придется полюбить то, что получили.</string>
    <string name="quote_28">Держитесь подальше от тех мелких людишек, которые стремятся лишить Вас Ваших амбиций. Лучше водите дружбу с великими людьми.</string>
    <string name="quote_29">Ваша идея, конечно, безумна. Весь вопрос в том, достаточно ли она безумна, чтобы оказаться верной.</string>
    <string name="quote_30">Музыка принадлежит всем. Только фирмы звукозаписи еще верят, что ее владельцы — они.</string>
    <string name="quote_31">Есть любовь, которая мешает человеку жить.</string>
    <string name="quote_32">Возненавидеть жизнь можно только вследствие апатии и лени.</string>
    <string name="quote_33">Избегайте тех, кто старается подорвать вашу веру в себя. Эта черта свойственна мелким людям. Великий человек, наоборот, внушает вам чувство, что и вы можете стать великим.</string>
    <string name="quote_34">В конце концов, ты вспомнишь не слова врагов, а молчание друзей.</string>
    <string name="quote_35">Мой способ шутить это говорить правду. На свете нет ничего смешнее.</string>
    <string name="quote_36">Кто счастлив сам, другим зла не желает.</string>
    <string name="quote_37">Мы часто повторяем, что о человеке судят по его делам, но забываем иногда, что слово тоже поступок. Речь человека — зеркало его самого.</string>
    <string name="quote_38">Я очень ценю две вещи — душевную близость и способность доставлять радость.</string>
    <string name="quote_39">Запомни: неразрешимая проблема, непримиримое противоречие вынуждают тебя превозмочь себя, а значит, вырасти — иначе с ними не справишься.</string>
    <string name="quote_40">Если вы делаете что-то прекрасное и возвышенное, а этого никто не замечает — не расстраивайтесь: восход солнца — это вообще самое прекрасное зрелище на свете, но большинство людей в это время еще спит.</string>
    <string name="quote_41">Женщины хотят меняться. Они не правы. Я за счастье. А счастье в постоянстве и в том, чтобы не изменяться.</string>
    <string name="quote_42">Я решил пройти по жизни с любовью. Ненависть — слишком тяжелое бремя.</string>
    <string name="quote_43">Я никогда не слушаю никого, кто критикует мои космические путешествия, мои аттракционы или моих горилл. Когда это происходит, я просто упаковываю моих динозавров и выхожу из комнаты.</string>
    <string name="quote_44">Каждый из нас вынужден жить в той реальности, которую он сам для себя выбрал. Трагедия состоит в том, что почти никто не делает этот выбор осознанно, поэтому и реальность нередко получается та еще…</string>
    <string name="quote_45">Если тебе тяжело, значит ты поднимаешься в гору. Если тебе легко, значит ты летишь в пропасть.</string>
    <string name="quote_46">Мечтайте о великом: лишь великие мечты в силах затронуть людские души.</string>
    <string name="quote_47">Ничто не приносит так много страданий, как большое количество удовольствия; ничто так сильно не связывает, как безграничная свобода</string>
    <string name="quote_48">Человек меньше всего похож на себя, когда говорит от своего имени. Дайте ему маску, и он расскажет всю правду.</string>
    <string name="quote_49">Мы должны признать очевидное: понимают лишь те, кто хочет понять.</string>
    <string name="quote_50">Каждый человек – это мир, который с ним рождается и с ним умирает.</string>
    <string name="quote_51">Надо всегда быть радостным. Если радость кончается, ищи, в чем ошибся.</string>
    <string name="quote_52">Глупца можно узнать по двум приметам: он много говорит о вещах, для него бесполезных, и высказывается о том, про что его не спрашивают.</string>
    <string name="quote_53">Испытай один раз полёт, и твои глаза навечно будут устремлены в небо. Однажды там побывав, на всю жизнь обречён тосковать о нём.</string>
    <string name="quote_54">Человек — ощущает себя, свои мысли и чувства, отделенными от всего мира — и это его оптический обман. Эта иллюзия стала темницей для нас, ограничивающей нас миром собственных желаний. Наша задача — освободиться из этой тюрьмы, расширив сферу своего участия до всякого живого существа, до целого мира. Никто не сможет выполнить эту задачу до конца, но попытки достичь этой цели, являются частью освобождения.</string>
    <string name="quote_55">Очень часто лучшее лекарство — это обойтись без него.</string>
    <string name="quote_56">Все дело в мыслях. Мысль — начало всего. И мыслями можно управлять. И потому главное дело совершенствования: работать над мыслями.</string>
    <string name="quote_57">Перестать читать книги — значит перестать мыслить.</string>
    <string name="quote_58">Сражение выигрывает тот, кто твердо решил его выиграть.</string>
    <string name="quote_59">Настоящий мужчина – это мужчина, который точно помнит день рождения женщины и никогда не знает, сколько ей лет. Мужчина,который никогда не помнит дня рождения женщины, но точно знает, сколько ей лет– это ее муж.</string>
    <string name="quote_60">Для человека, если на то пошло, память — это все. Память- это индивидуальность. Память-это ты.</string>
    <string name="quote_61">Отпускайте идиотов и клоунов из своей жизни.  Цирк должен гастролировать!</string>
    <string name="quote_62">Если ты будешь колоть дрова сам, то согреешься ими дважды.</string>
    <string name="quote_63">Уважать всякого человека, как самого себя, и поступать с ним, как мы желаем, чтобы с нами поступали, — выше этого нет ничего.</string>

    <string name="hint_text_note">Введите текст</string>
    <string name="add_note">Добавить заметку</string>
    <string name="new_note">Новая заметка</string>
    <string name="note_delete">Заметка удалена</string>
</resources>