<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/ic_quote"
        android:icon="@drawable/todo"
        android:title="@string/bottom_todo"
        />

    <item
        android:id="@+id/ic_advice"
        android:icon="@drawable/advice"
        android:title="@string/bottom_advice"
        />
    <item
        android:id="@+id/ic_motivation"
        android:icon="@drawable/motivation"
        android:title="@string/bottom_motivation"
        />
    <item
        android:id="@+id/ic_habits"
        android:icon="@drawable/habits"
        android:title="@string/bottom_habits"
        />
    <item
        android:id="@+id/ic_settings"
        android:icon="@drawable/settings"
        android:title="@string/bottom_settings"
        />




</menu>